ros_packages/log/build_2022-04-03_19-21-49/pid/stdout_stderr.log
running egg_info
writing ../build/pid/pid.egg-info/PKG-INFO
writing dependency_links to ../build/pid/pid.egg-info/dependency_links.txt
writing entry points to ../build/pid/pid.egg-info/entry_points.txt
writing requirements to ../build/pid/pid.egg-info/requires.txt
writing top-level names to ../build/pid/pid.egg-info/top_level.txt
reading manifest file '../build/pid/pid.egg-info/SOURCES.txt'
writing manifest file '../build/pid/pid.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /opt/ros/dev_ws/src/install/pid/lib/python3.8/site-packages/pid/test.py to test.cpython-38.pyc
  File "/opt/ros/dev_ws/src/install/pid/lib/python3.8/site-packages/pid/test.py", line 5
    const int trigPin = 9;
          ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/opt/ros/dev_ws/src/install/pid/lib/python3.8/site-packages/pid-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../build/pid/pid.egg-info to /opt/ros/dev_ws/src/install/pid/lib/python3.8/site-packages/pid-0.0.0-py3.8.egg-info
running install_scripts
Installing pid script to /opt/ros/dev_ws/src/install/pid/lib/pid
writing list of installed files to '/opt/ros/dev_ws/src/build/pid/install.log'
